test/spec/labels.txt
;;; ERROR: 1
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/labels.wast
(;; STDERR ;;;

;;; STDERR ;;)
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/labels.wast:179:40: arity mismatch of br value. label expects void, but br value is non-empty
assert_invalid error:
  third_party/testsuite/labels.wast:180:50: type mismatch of unary op. got void, expected f32
assert_invalid error:
  third_party/testsuite/labels.wast:182:54: type mismatch of block. got void, expected f32
assert_invalid error:
  third_party/testsuite/labels.wast:183:54: type mismatch of block. got void, expected i32
assert_invalid error:
  third_party/testsuite/labels.wast:183:64: type mismatch of br_if value. got f32, expected i32
assert_invalid error:
  third_party/testsuite/labels.wast:184:50: type mismatch of unary op. got void, expected f32
assert_invalid error:
  third_party/testsuite/labels.wast:184:50: arity mismatch of br_if value. label expects void, but br value is non-empty
assert_invalid error:
  third_party/testsuite/labels.wast:185:66: type mismatch of block. got f32, expected i32
assert_invalid error:
  third_party/testsuite/labels.wast:185:75: type mismatch of unary op. got void, expected f32
assert_invalid error:
  third_party/testsuite/labels.wast:185:85: type mismatch of br_if value. got f32, expected i32
assert_invalid error:
  third_party/testsuite/labels.wast:187:32: type mismatch of block. got void, expected f32
assert_invalid error:
  third_party/testsuite/labels.wast:189:42: arity mismatch of br_if value. label expects void, but br value is non-empty
assert_invalid error:
  third_party/testsuite/labels.wast:195:25: arity mismatch of br value. label expects void, but br value is non-empty
WasmModule::Instantiate(): Compiling WASM function #12:misc1 failed:Result = I32Xor found empty stack @+7

  var module = _WASMEXP_.instantiateModule(u8a.buffer, ffi);
                         ^

;;; STDOUT ;;)
